Revert "Remove --add-opens since it's not compatible with Java 8"
This reverts commit 108477b86567b5494eac4fe1068638daba9a6e7e.